--- a/pages/comparator/compare.html
+++ b/pages/comparator/compare.html
@@ -9,188 +9,335 @@
 </head>
 <body>
     <div id="main">
+        <!-- <div>
+            <p>tax rate</p>
+            <p>minimum wage</p>
+            <p>monthly car insurance</p>
+            <p>annual car insurance</p>
+            <p>monthly house insurace</p>
+            <p>annual house insurance</p>
+            <p>monthly health insurance</p>
+            <p>annual health insurance</p>
+            <p>average house cost</p>
+            <hr>
+        </div> -->
         <div class="flexbox">
             <div>
-                <p>tax rate</p>
-                <p>minimum wage</p>
-                <p>monthly car insurance</p>
-                <p>annual car insurance</p>
-                <p>monthly house insurace</p>
-                <p>annual house insurance</p>
-                <p>monthly health insurance</p>
-                <p>annual health insurance</p>
-                <p>average house cost</p>
-                <hr>
-            </div>
-            <div>
                 <ul class="list">
+                    <li>
+                        <h2 class="states">States</h2>
+                    </li>
                     <a>
-                        <li>Alabama, AL
-                    </li></a>
+                        <li>Alabama, AL</li>
+                    </a>
                     <a>
-                        <li>Alaska, AK
-                    </li></a>
+                        <li>Alaska, AK</li>
+                    </a>
                     <a>
-                        <li>Arizona, AZ
-                    </li></a>
+                        <li>Arizona, AZ</li>
+                    </a>
                     <a>
-                        <li>Arkansas, AR
-                    </li></a>
+                        <li>Arkansas, AR</li>
+                    </a>
                     <a>
-                        <li>California, CA
-                    </li></a>
+                        <li>California, CA</li>
+                    </a>
                     <a>
-                        <li>Colorado, CO
-                    </li></a>
+                        <li>Colorado, CO</li>
+                    </a>
                     <a>
-                        <li>Connecticut, CT
-                    </li></a>
+                        <li>Connecticut, CT</li>
+                    </a>
                     <a>
-                        <li>Delaware, DE
-                    </li></a>
+                        <li>Delaware, DE</li>
+                    </a>
                     <a>
-                        <li>Florida, FL
-                    </li></a>
+                        <li>Florida, FL</li>
+                    </a>
                     <a>
-                        <li>Georgia, GA
-                    </li></a>
+                        <li>Georgia, GA</li>
+                    </a>
+                    <a>
+                        <li>Hawaii, HI</li>
+                    </a>
+                    <a>
+                        <li>Idaho, ID</li>
+                    </a>
+                    <a>
+                        <li>Illinois, IL</li>
+                    </a>
+                    <a>
+                        <li>Indiana, IN</li>
+                    </a>
+                    <a>
+                        <li>Iowa, IA</li>
+                    </a>
+                    <a>
+                        <li>Kansas, KS</li>
+                    </a>
+                    <a>
+                        <li>Kentucky, KY</li>
+                    </a>
+                    <a>
+                        <li>Louisiana, LA</li>
+                    </a>
+                    <a>
+                        <li>Maine, ME</li>
+                    </a>
+                    <a>
+                        <li>Maryland, MD</li>
+                    </a>
+                    <a>
+                        <li>Massachusetts, MA</li>
+                    </a>
+                    <a>
+                        <li>Michigan, MI</li>
+                    </a>
+                    <a>
+                        <li>Minnesota, MN</li>
+                    </a>
+                    <a>
+                        <li>Mississippi, MS</li>
+                    </a>
+                    <a>
+                        <li>Missouri, MO</li>
+                    </a>
+                    <a>
+                        <li>Montana, MT</li>
+                    </a>
+                    <a>
+                        <li>Nebraska, NE</li>
+                    </a>
+                    <a>
+                        <li>Nevada, NV</li>
+                    </a>
+                    <a>
+                        <li>New Hampshire, NH</li>
+                    </a>
+                    <a>
+                        <li>New Jersey, NJ</li>
+                    </a>
+                    <a>
+                        <li>New Mexico, NM</li>
+                    </a>
+                    <a>
+                        <li>New York, NY</li>
+                    </a>
+                    <a>
+                        <li>North Carolina, NC</li>
+                    </a>
+                    <a>
+                        <li>North Dakota, ND</li>
+                    </a>
+                    <a>
+                        <li>Ohio, OH</li>
+                    </a>
+                    <a>
+                        <li>Oklahoma, OK</li>
+                    </a>
+                    <a>
+                        <li>Oregon, OR</li>
+                    </a>
+                    <a>
+                        <li>Pennsylvania, PA</li>
+                    </a>
+                    <a>
+                        <li>Rhode Island, RI</li>
+                    </a>
+                    <a>
+                        <li>South Carolina, SC</li>
+                    </a>
+                    <a>
+                        <li>South Dakota, SD</li>
+                    </a>
+                    <a>
+                        <li>Tennessee, TN</li>
+                    </a>
+                    <a>
+                        <li>Texas, TX</li>
+                    </a>
+                    <a>
+                        <li>Utah, UT</li>
+                    </a>
+                    <a>
+                        <li>Vermont, VT</li>
+                    </a>
+                    <a>
+                        <li>Virginia, VA</li>
+                    </a>
+                    <a>
+                        <li>Washington, WA</li>
+                    </a>
+                    <a>
+                        <li>West Virginia, WV</li>
+                    </a>
+                    <a>
+                        <li>Wisconsin, WI</li>
+                    </a>
+                    <a>
+                        <li>Wyoming, WY</li>
+                    </a>
                 </ul>
             </div>
             <div>
                 <ul class="list">
+                    <li>
+                        <h2 class="states">States</h2>
+                    </li>
                     <a>
-                        <li>Hawaii, HI
-                    </li></a>
+                        <li>Alabama, AL</li>
+                    </a>
                     <a>
-                        <li>Idaho, ID
-                    </li></a>
+                        <li>Alaska, AK</li>
+                    </a>
                     <a>
-                        <li>Illinois, IL
-                    </li></a>
+                        <li>Arizona, AZ</li>
+                    </a>
                     <a>
-                        <li>Indiana, IN
-                    </li></a>
+                        <li>Arkansas, AR</li>
+                    </a>
                     <a>
-                        <li>Iowa, IA
-                    </li></a>
+                        <li>California, CA</li>
+                    </a>
                     <a>
-                        <li>Kansas, KS
-                    </li></a>
+                        <li>Colorado, CO</li>
+                    </a>
                     <a>
-                        <li>Kentucky, KY
-                    </li></a>
+                        <li>Connecticut, CT</li>
+                    </a>
                     <a>
-                        <li>Louisiana, LA
-                    </li></a>
+                        <li>Delaware, DE</li>
+                    </a>
                     <a>
-                        <li>Maine, ME
-                    </li></a>
+                        <li>Florida, FL</li>
+                    </a>
                     <a>
-                        <li>Maryland, MD
-                    </li></a>
-                </ul>
-            </div>
-            <div>
-                <ul class="list">
+                        <li>Georgia, GA</li>
+                    </a>
                     <a>
-                        <li>Massachusetts, MA
-                    </li></a>
+                        <li>Hawaii, HI</li>
+                    </a>
                     <a>
-                        <li>Michigan, MI
-                    </li></a>
+                        <li>Idaho, ID</li>
+                    </a>
                     <a>
-                        <li>Minnesota, MN
-                    </li></a>
+                        <li>Illinois, IL</li>
+                    </a>
                     <a>
-                        <li>Mississippi, MS
-                    </li></a>
+                        <li>Indiana, IN</li>
+                    </a>
                     <a>
-                        <li>Missouri, MO
-                    </li></a>
+                        <li>Iowa, IA</li>
+                    </a>
                     <a>
-                        <li>Montana, MT
-                    </li></a>
+                        <li>Kansas, KS</li>
+                    </a>
                     <a>
-                        <li>Nebraska, NE
-                    </li></a>
+                        <li>Kentucky, KY</li>
+                    </a>
                     <a>
-                        <li>Nevada, NV
-                    </li></a>
+                        <li>Louisiana, LA</li>
+                    </a>
                     <a>
-                        <li>New Hampshire, NH
-                    </li></a>
+                        <li>Maine, ME</li>
+                    </a>
                     <a>
-                        <li>New Jersey, NJ
-                    </li></a>
-                </ul>
-            </div>
-            <div>
-                <ul class="list">
+                        <li>Maryland, MD</li>
+                    </a>
                     <a>
-                        <li>New Mexico, NM
-                    </li></a>
+                        <li>Massachusetts, MA</li>
+                    </a>
                     <a>
-                        <li>New York, NY
-                    </li></a>
+                        <li>Michigan, MI</li>
+                    </a>
                     <a>
-                        <li>North Carolina, NC
-                    </li></a>
+                        <li>Minnesota, MN</li>
+                    </a>
                     <a>
-                        <li>North Dakota, ND
-                    </li></a>
+                        <li>Mississippi, MS</li>
+                    </a>
                     <a>
-                        <li>Ohio, OH
-                    </li></a>
+                        <li>Missouri, MO</li>
+                    </a>
                     <a>
-                        <li>Oklahoma, OK
-                    </li></a>
+                        <li>Montana, MT</li>
+                    </a>
                     <a>
-                        <li>Oregon, OR
-                    </li></a>
+                        <li>Nebraska, NE</li>
+                    </a>
                     <a>
-                        <li>Pennsylvania, PA
-                    </li></a>
+                        <li>Nevada, NV</li>
+                    </a>
                     <a>
-                        <li>Rhode Island, RI
-                    </li></a>
+                        <li>New Hampshire, NH</li>
+                    </a>
                     <a>
-                        <li>South Carolina, SC
-                    </li></a>
-                </ul>
-            </div>
-            <div>
-                <ul class="list">
+                        <li>New Jersey, NJ</li>
+                    </a>
                     <a>
-                        <li>South Dakota, SD
-                    </li></a>
+                        <li>New Mexico, NM</li>
+                    </a>
                     <a>
-                        <li>Tennessee, TN
-                    </li></a>
+                        <li>New York, NY</li>
+                    </a>
                     <a>
-                        <li>Texas, TX
-                    </li></a>
+                        <li>North Carolina, NC</li>
+                    </a>
                     <a>
-                        <li>Utah, UT
-                    </li></a>
+                        <li>North Dakota, ND</li>
+                    </a>
                     <a>
-                        <li>Vermont, VT
-                    </li></a>
+                        <li>Ohio, OH</li>
+                    </a>
                     <a>
-                        <li>Virginia, VA
-                    </li></a>
-                    <a><li>Washington, WA</li></a>
+                        <li>Oklahoma, OK</li>
+                    </a>
                     <a>
-                        <li>West Virginia, WV
-                    </li></a>
+                        <li>Oregon, OR</li>
+                    </a>
                     <a>
-                        <li>Wisconsin, WI
-                    </li></a>
+                        <li>Pennsylvania, PA</li>
+                    </a>
                     <a>
-                        <li>Wyoming, WY
-                    </li></a>
+                        <li>Rhode Island, RI</li>
+                    </a>
+                    <a>
+                        <li>South Carolina, SC</li>
+                    </a>
+                    <a>
+                        <li>South Dakota, SD</li>
+                    </a>
+                    <a>
+                        <li>Tennessee, TN</li>
+                    </a>
+                    <a>
+                        <li>Texas, TX</li>
+                    </a>
+                    <a>
+                        <li>Utah, UT</li>
+                    </a>
+                    <a>
+                        <li>Vermont, VT</li>
+                    </a>
+                    <a>
+                        <li>Virginia, VA</li>
+                    </a>
+                    <a>
+                        <li>Washington, WA</li>
+                    </a>
+                    <a>
+                        <li>West Virginia, WV</li>
+                    </a>
+                    <a>
+                        <li>Wisconsin, WI</li>
+                    </a>
+                    <a>
+                        <li>Wyoming, WY</li>
+                    </a>
                 </ul>
             </div>
         </div>
+        
         <input type="text" id="yourState" placeholder="State 1"></input>
         <input type="text" id="wantedState" placeholder="State 2"></input>
         <input type="text" id="comparator" placeholder="what you want to compare"></input>
