--- a/pages/comparator/compare.html
+++ b/pages/comparator/compare.html
@@ -20,9 +20,7 @@
             <p>annual health insurance</p>
             <p>average house cost</p>
             <hr>
-<<<<<<< Updated upstream
-=======
-        </div> -->
+        </div>
         <div class="flexbox">
             <div class="left">
                 <!-- <ul class="list"> -->
@@ -338,7 +336,6 @@
                     </a>
                 <!-- </ul> -->
             </div>
->>>>>>> Stashed changes
         </div>
         <div>
             <ul class="list">
