--- a/pages/comparator/compare.html
+++ b/pages/comparator/compare.html
@@ -27,64 +27,53 @@
                     <p>
                         <h1 class="states">States</h1>
                     </p>
-                    <a>
-                        <p>Alabama, AL</p>
-                    </a>
-                    <a>
-                        <p>Alaska, AK</p>
-                    </a>
-                    <a>
-                        <p>Arizona, AZ</p>
-                    </a>
-                    <a>
-                        <p>Arkansas, AR</p>
-                    </a>
-                    <a>
-                        <p>California, CA</p>
-                    </a>
-                    <a>
-                        <p>Colorado, CO</p>
-                    </a>
-                    <a>
-                        <p>Connecticut, CT</p>
-                    </a>
-                    <a>
-                        <p>Delaware, DE</p>
-                    </a>
-                    <a>
-                        <p>Florida, FL</p>
-                    </a>
-                    <a>
-                        <p>Georgia, GA</p>
-                    </a>
-                    <a>
-                        <p>Hawaii, HI</p>
-                    </a>
-                    <a>
+                    <a href="javascript:AL();"><p>Alabama, AL</p></a>
+
+                    <a href="javascript:AK();"><p>Alaska, AK</p></a>
+
+                    <a href="javascript:AZ();"><p>Arizona, AZ</p></a>
+
+                    <a href="javascript:AR();"><p>Arkansas, AR</p></a>
+
+                    <a href="javascript:CA();"><p>California, CA</p></a>
+
+                    <a href="javascript:CO();"><p>Colorado, CO</p></a>
+
+                    <a href="javascript:CT();"><p>Connecticut, CT</p></a>
+
+                    <a href="javascript:DE();"><p>Delaware, DE</p></a>
+
+                    <a href="javascript:FL();"><p>Florida, FL</p></a>
+
+                    <a href="javascript:GA();"><p>Georgia, GA</p></a>
+
+                    <a href="javascript:HI();"><p>Hawaii, HI</p></a>
+                    
+                    <a href="javascript:ID();">
                         <p>Idaho, ID</p>
                     </a>
-                    <a>
+                    <a href="javascript:IL();">
                         <p>Illinois, IL</p>
                     </a>
-                    <a>
+                    <a href="javascript:IN();">
                         <p>Indiana, IN</p>
                     </a>
-                    <a>
+                    <a href="javascript:IA();">
                         <p>Iowa, IA</p>
                     </a>
-                    <a>
+                    <a href="javascript:KS();">
                         <p>Kansas, KS</p>
                     </a>
-                    <a>
+                    <a href="javascript:KY();">
                         <p>Kentucky, KY</p>
                     </a>
-                    <a>
+                    <a href="javascript:LA();">
                         <p>Louisiana, LA</p>
                     </a>
-                    <a>
+                    <a href="javascript:ME();">
                         <p>Maine, ME</p>
                     </a>
-                    <a>
+                    <a href="javascript:MD();">
                         <p>Maryland, MD</p>
                     </a>
                     <a>
@@ -337,74 +326,54 @@
                 <!-- </ul> -->
             </div>
         </div>
+
+
+        </div>
         <div>
             <ul class="list">
-                <a href="javascript:AL();"><li>Alabama, AL</a ></li>
-                <a href="javascript:AK();"><li>Alaska, AK</a ></li>
-                <a href="javascript:AZ();"><li>Arizona, AZ</a ></li>
-                <a href="javascript:AR();"><li>Arkansas, AR</a ></li>
-                <a href="javascript:CA();"><li>California, CA</a ></li>
-                <a href="javascript:CO();"><li>Colorado, CO</a ></li>
-                <a href="javascript:CT();"><li>Connecticut, CT</a ></li>
-                <a href="javascript:DE();"><li>Delaware, DE</a ></li>
-                <a href="javascript:FL();"><li>Florida, FL</a ></li>
-                <a href="javascript:GA();"><li>Georgia, GA</a ></li>
+                
             </ul>
         </div>
         <div>
             <ul class="list">
-                <a href="javascript:HI();"><li>Hawaii, HI</a ></li>
-                <a href="javascript:ID();"><li>Idaho, ID</a ></li>
-                <a href="javascript:IL();"><li>Illinois, IL</a ></li>
-                <a href="javascript:IN();"><li>Indiana, IN</a ></li>
-                <a href="javascript:IA();"><li>Iowa, IA</a ></li>
-                <a href="javascript:KS();"><li>Kansas, KS</a ></li>
-                <a href="javascript:KY();"><li>Kentucky, KY</a ></li>
-                <a href="javascript:LA();"><li>Louisiana, LA</a ></li>
-                <a href="javascript:ME();"><li>Maine, ME</a ></li>
-                <a href="javascript:MD();"><li>Maryland, MD</a ></li>
+                <a href="javascript:MA();"><p>Massachusetts, MA</p></a>
+                <a href="javascript:MI();"><p>Michigan, MI</p></a>
+                <a href="javascript:MN();"><p>Minnesota, MN</p></a>
+                <a href="javascript:MS();"><p>Mississippi, MS</p></a>
+                <a href="javascript:MO();"><p>Missouri, MO</p></a>
+                <a href="javascript:MT();"><p>Montana, MT</p></a>
+                <a href="javascript:NE();"><p>Nebraska, NE</p></a>
+                <a href="javascript:NV();"><p>Nevada, NV</p></a>
+                <a href="javascript:NH();"><p>New Hampshire, NH</p></a>
+                <a href="javascript:NJ();"><p>New Jersey, NJ</p></a>
             </ul>
         </div>
         <div>
             <ul class="list">
-                <a href="javascript:MA();"><li>Massachusetts, MA</a ></li>
-                <a href="javascript:MI();"><li>Michigan, MI</a ></li>
-                <a href="javascript:MN();"><li>Minnesota, MN</a ></li>
-                <a href="javascript:MS();"><li>Mississippi, MS</a ></li>
-                <a href="javascript:MO();"><li>Missouri, MO</a ></li>
-                <a href="javascript:MT();"><li>Montana, MT</a ></li>
-                <a href="javascript:NE();"><li>Nebraska, NE</a ></li>
-                <a href="javascript:NV();"><li>Nevada, NV</a ></li>
-                <a href="javascript:NH();"><li>New Hampshire, NH</a ></li>
-                <a href="javascript:NJ();"><li>New Jersey, NJ</a ></li>
+                <a href="javascript:NM();"><p>New Mexico, NM</p></a>
+                <a href="javascript:NY();"><p>New York, NY</p></a>
+                <a href="javascript:NC();"><p>North Carolina, NC</p></a>
+                <a href="javascript:ND();"><p>North Dakota, ND</p></a>
+                <a href="javascript:OH();"><p>Ohio, OH</p></a>
+                <a href="javascript:OK();"><p>Oklahoma, OK</p></a>
+                <a href="javascript:OR();"><p>Oregon, OR</p></a>
+                <a href="javascript:PA();"><p>Pennsylvania, PA</p></a>
+                <a href="javascript:RI();"><p>Rhode Island, RI</p></a>
+                <a href="javascript:SC();"><p>South Carolina, SC</p></a>
             </ul>
         </div>
         <div>
             <ul class="list">
-                <a href="javascript:NM();"><li>New Mexico, NM</a ></li>
-                <a href="javascript:NY();"><li>New York, NY</a ></li>
-                <a href="javascript:NC();"><li>North Carolina, NC</a ></li>
-                <a href="javascript:ND();"><li>North Dakota, ND</a ></li>
-                <a href="javascript:OH();"><li>Ohio, OH</a ></li>
-                <a href="javascript:OK();"><li>Oklahoma, OK</a ></li>
-                <a href="javascript:OR();"><li>Oregon, OR</a ></li>
-                <a href="javascript:PA();"><li>Pennsylvania, PA</a ></li>
-                <a href="javascript:RI();"><li>Rhode Island, RI</a ></li>
-                <a href="javascript:SC();"><li>South Carolina, SC</a ></li>
-            </ul>
-        </div>
-        <div>
-            <ul class="list">
-                <a href="javascript:SD();"><li>South Dakota, SD</a ></li>
-                <a href="javascript:TN();"><li>Tennessee, TN</a ></li>
-                <a href="javascript:TX();"><li>Texas, TX</a ></li>
-                <a href="javascript:UT();"><li>Utah, UT</a ></li>
-                <a href="javascript:VT();"><li>Vermont, VT</a ></li>
-                <a href="javascript:VA();"><li>Virginia, VA</a ></li>
-                <a href="javascript:WA();"><li>Washington, WA</a ></li>
-                <a href="javascript:WV();"><li>West Virginia, WV</a ></li>
-                <a href="javascript:SC();"><li>Wisconsin, WI</a ></li>
-                <a href="javascript:SC();"><li>Wyoming, WY</a ></li>
+                <a href="javascript:SD();"><p>South Dakota, SD</p></a>
+                <a href="javascript:TN();"><p>Tennessee, TN</p></a>
+                <a href="javascript:TX();"><p>Texas, TX</p></a>
+                <a href="javascript:UT();"><p>Utah, UT</p></a>
+                <a href="javascript:VT();"><p>Vermont, VT</p></a>
+                <a href="javascript:VA();"><p>Virginia, VA</p></a>
+                <a href="javascript:WA();"><p>Washington, WA</p></a>
+                <a href="javascript:WV();"><p>West Virginia, WV</p></a>
+                <a href="javascript:SC();"><p>Wisconsin, WI</p></a>
+                <a href="javascript:SC();"><p>Wyoming, WY</p></a>
             </ul>
         </div>
         <input type="text" id="yourState" placeholder="State 1"></input>
