--- a/pages/login/index.html
+++ b/pages/login/index.html
@@ -40,7 +40,7 @@
             </h1>
             <br>
             <p class="goalsParagraph">
-                The main goal for SPA is to help those in need. 
+                The main goal for <span class="blueText">SPA</span> is to help those <span class="blueText">in need</span>. Familes who need to move <span class="blueText">across</span> the <span class="blueText">country</span>, people who are <span class="blueText">too poor</span> to live in a certain <span class="blueText">state</span>, and just those who need <span class="blueText">access</span> to this <span class="blueText">information</span>. It helps <span class="blueText">everyone</span>, and <span class="blueText">SPA</span> is for the common man. <span class="blueText">Anyone</span> can use it, and that is what's <span class="blueText">important</span>.
             </p>
         </div>
     </div>
