--- a/pages/login/index.html
+++ b/pages/login/index.html
@@ -44,6 +44,7 @@
             </p>
         </div>
     </div>
+    <footer></footer>
     <script src="../../scripts/login.js"></script>
 </body>
 </html>
