--- a/pages/comparator/compare.html
+++ b/pages/comparator/compare.html
@@ -151,15 +151,15 @@
                 <div class="comp">
                     <center>
                         <h1>Comparators</h1>
-                        <p>tax rate</p>
-                        <p>minimum wage</p>
-                        <p>monthly car insurance</p>
-                        <p>annual car insurance</p>
-                        <p>monthly house insurace</p>
-                        <p>annual house insurance</p>
-                        <p>monthly health insurance</p>
-                        <p>annual health insurance</p>
-                        <p>average house cost</p>
+                        <p>population</p>
+                        <p>amount unemployed</p>
+                        <p>amount of food stamp recipents</p>
+                        <p>gdp</p>
+                        <p>debt</p>
+                        <p>debt to gpd</p>
+                        <p>state revenue</p>
+                        <p>average state spending</p>
+                        <p>average debt per citizen</p>
                         <br><br><br><br><br><br>
                     </center>
                 </div>
