Added css and html

--- a/pages/comparator/compare.html
+++ b/pages/comparator/compare.html
@@ -8,6 +8,22 @@
     <link rel="stylesheet" href="compare.css">
 </head>
 <body>
+    <header>
+        <div class="titleContainer">
+            <h1 class="title">
+                S.P.A.
+                <div class="subTitle">State Pricing Analytics</div>
+            </h1>
+        </div>
+    </header>
+    <div class="headerLinksContainer">
+        <a href="../login/index.html" class="homeLink">
+            Home
+        </a>
+        <a href="../comparator/compare.html" class="searchLink" id="underlineLink">
+            Search
+        </a>
+    </div>
     <div id="main">
         <div class="flexbox">
             <div class="left">
@@ -359,6 +375,31 @@
 
         
     </div>
+    <footer>
+        <h1 class="footerTitle">
+            Contact Us
+        </h1>
+        <div class="contactUsContainer">
+            <span class="footerPhoneNumber">
+                +1(480) 714-8699
+            </span>
+            <span class="footerEmail">
+                jrigne469@west-mec.org
+            </span>
+        </div>
+        <div class="contactUsContainer">
+            <span class="footerPhoneNumber">
+                +1(623) 229-5816
+            </span>
+            <span class="footerEmail">
+                etrans914@west-mec.org
+            </span>
+        </div>
+        <br>
+        <br>
+        <br>
+        <br>
+    </footer>
     <script src="../../scripts/compare.js"></script>
 </body>
 </html>
