--- a/pages/login/index.html
+++ b/pages/login/index.html
@@ -20,11 +20,12 @@
             <a href="index.html" class="homeLink" id="underlineLink">
                 Home
             </a>
-            <a href="search.html" class="searchLink">
+            <a href="../comparator/compare.html" class="searchLink">
                 Search
             </a>
         </div>
     <div class="mainContentContainer">
+        
         <div class="introductionContainer">
             <h1>
                 What is SPA?
@@ -34,17 +35,61 @@
                 <span class="orangeText">SPA (State Pircing Analytics)</span> is a state based comparison, where you can compare different <span class="orangeText">basic needs</span> between states. This includes <span class="orangeText">insurance rates</span>, pricing, <span class="orangeText">healthcare</span>, and more! <span class="orangeText">SPA</span> is the perfect way to <span class="orangeText">quickly</span> see different useful information about each state.
             </p>
         </div>
+        <div class="howToContainer">
+            <h1>How Do You Use SPA?</h1>
+            <br>
+            <p class="howToParagraph">
+                To use SPA, click on "search" found at the top of this page. This will bring you to a page where you can select two different states, and then compare them based on what you choose. For instance, you can compare Texas's and Wyoming's population, or New York's and Arizona's state revenue. . 
+            </p>
+            <br>
+            <br>
+            <p class="howToParagraph">
+                You select the first state you want to compare on the left and then the second state you want to compare on the right. Then you will choose what you want to compare them by in the center of the page. Hit enter and you have your desired results!
+            </p>
+        </div>
         <div class="goalsContainer">
             <h1>
                 What are our Goals?
             </h1>
             <br>
             <p class="goalsParagraph">
-                The main goal for <span class="blueText">SPA</span> is to help those <span class="blueText">in need</span>. Familes who need to move <span class="blueText">across</span> the <span class="blueText">country</span>, people who are <span class="blueText">too poor</span> to live in a certain <span class="blueText">state</span>, and just those who need <span class="blueText">access</span> to this <span class="blueText">information</span>. It helps <span class="blueText">everyone</span>, and <span class="blueText">SPA</span> is for the common man. <span class="blueText">Anyone</span> can use it, and that is what's <span class="blueText">important</span>.
+                The main goal for <span class="orangeText">SPA</span> is to help those <span class="orangeText">in need</span>. Familes who need to move <span class="orangeText">across</span> the <span class="orangeText">country</span>, people who are <span class="orangeText">too poor</span> to live in a certain <span class="orangeText">state</span>, and just those who need <span class="orangeText">access</span> to this <span class="orangeText">information</span>. It helps <span class="orangeText">everyone</span>, and <span class="orangeText">SPA</span> is for the common man. <span class="orangeText">Anyone</span> can use it, and that is what's <span class="orangeText">important</span>.
             </p>
         </div>
     </div>
-    <footer></footer>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <footer>
+        <h1 class="footerTitle">
+            Contact Us
+        </h1>
+        <div class="contactUsContainer">
+            <span class="footerPhoneNumber">
+                +1(480) 714-8699
+            </span>
+            <span class="footerEmail">
+                jrigne469@west-mec.org
+            </span>
+        </div>
+        <div class="contactUsContainer">
+            <span class="footerPhoneNumber">
+                +1(623) 229-5816
+            </span>
+            <span class="footerEmail">
+                etrans914@west-mec.org
+            </span>
+        </div>
+        <br>
+        <br>
+        <br>
+        <br>
+    </footer>
     <script src="../../scripts/login.js"></script>
 </body>
 </html>
