--- a/pages/login/index.html
+++ b/pages/login/index.html
@@ -85,9 +85,22 @@
                 etrans914@west-mec.org
             </span>
         </div>
-        <br>
-        <br>
-        <br>
+        <div class="contactUsContainer">
+            <span class="footerPhoneNumber">
+                +1(602) 284-8840
+            </span>
+            <span class="footerEmail">
+                nsanto591@west-mec.org
+            </span>
+        </div>
+        <div class="contactUsContainer">
+            <span class="footerPhoneNumber">
+                +1(602) 220-8417
+            </span>
+            <span class="footerEmail">
+                amurph068@west-mec.org
+            </span>
+        </div>
         <br>
     </footer>
     <script src="../../scripts/login.js"></script>
