--- a/pages/homePage/index.html
+++ b/pages/homePage/index.html
@@ -17,7 +17,7 @@
         </div>
     </header>
     <div class="headerLinksContainer">
-            <a href="index.html" class="homeLink" id="underlineLink">
+            <a href="../homePage/index.html" class="homeLink" id="underlineLink">
                 Home
             </a>
             <a href="../comparator/compare.html" class="searchLink">
